<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_header"
        android:textSize="25sp" />
    
    <EditText
        android:id="@+id/iden"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/pad"
        android:hint="@string/username"
        android:singleLine="true" />
    
    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:paddingTop="@dimen/pad"
        android:hint="@string/password"
        android:singleLine="true"  />
    
    <CheckBox android:id="@+id/checkbox_save_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/marg"
        android:text="@string/save"
        android:onClick="savePassword" />
    
    <EditText
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:inputType="textPassword"
        android:paddingTop="@dimen/pad"
        android:clickable="false" 
        android:cursorVisible="false" 
        android:focusable="false" 
        android:focusableInTouchMode="false" />
	
    <RelativeLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
	        android:id="@+id/register"
	        android:layout_width="100dp"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true" 
	        android:text="@string/reg"
	        android:onClick="register" />
	    <Button
	        android:id="@+id/login"
	        android:layout_width="100dp"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:text="@string/login"
	        android:onClick="login" />
	</RelativeLayout>
    
</LinearLayout>
